--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "php": "^7.1"
+    "php": "^7.1",
+    "yivi/very-simple-html-writer": "dev-master"
   },
   "autoload": {
     "psr-4": {
