updated to point at specific version of VSW

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "yivi/very-simple-html-writer": "dev-master"
+    "yivi/very-simple-html-writer": "~0.1.0"
   },
   "autoload": {
     "files": [
